--- a/src/styles.css
+++ b/src/styles.css
@@ -5,21 +5,21 @@
   font-family: 'Heebo', sans-serif;
   text-align: center;
   outline: none;
-  /* padding: 0; */
 }
 
-html{
+/* html{
   height: 100%;
-}
+} */
 
 body{
   background-color: #379683;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%23379683'/%3E%3Cstop offset='1' stop-color='%235cdb95'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%238ee4af' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%238ee4af' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%238ee4af' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%238ee4af' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
-  min-height: 100%;
  
   color: white;
+  font-size: 20px;
+  /* min-height: 100%; */
 }
 
 .App{
@@ -30,12 +30,17 @@ body{
 
 .mainSection{
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.5rem;
+  font-weight: bold;
 }
 
-header h1{
+header h2{
   color: white;
   background-color: #05386b;
-  padding: 0.5rem 0;
+  padding: 1rem;
 }
 
 .errMsg{
@@ -51,17 +56,20 @@ header h1{
   border: solid 3px #05386b;
   border-radius: 0.5rem;
   margin-top: 1rem;
+  background-color: white;
+  font-size: 20px;
+  text-align: center;
 }
 
 img {
-  max-width: 50%;
+  max-width: 80%;
   border-radius: 1rem;
 }
 
 button {
   color: #05386b;
   font-weight: bold;
-  font-size: 0.9rem;
+  font-size: 20px;
   border: solid 3px #05386b;
   margin: 0.3rem 0.3rem;
   background-color: #5bc595;
@@ -81,7 +89,7 @@ button:active{
 footer{
   margin-top: 2rem;
   background-color: #05386b;
-  padding-top: 0.5rem;
+  padding: 0.5rem;
   flex-shrink: 0;
 }
 
